[tool.poetry]
name = "chainlit-chatbot"
version = "0.1.0"
description = "Simple ChatBot using Chainlit, Langchain and OpenAI"
authors = ["NanthagopalEswaran <nanthagopaleswaran@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
chainlit = "^1.0.502"
langchain = "^0.1.14"
langchain-openai = "^0.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
mypy = "^1.9.0"
pre-commit = "^3.7.0"


[tool.ruff]
# Allow lines to be as long as 100.
line-length = 100


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
    "C",  # pylint convention
    "A",  # flake8-builtins
    "N",  # pep8-naming
    "ASYNC",  # flake8-async
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by formatter
    "W191",  # indentation contains tabs
]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
